[package]
name = "obd2"
description = "Utility for reading data from a vehicle over OBD-II"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rsammelson/obd2"
version = "0.2.0-pre3"
edition = "2021"

[dependencies]
env_logger = "0.10"
ftdi = "0.1.3"
log = "0.4.8"
thiserror = "1.0.15"
serialport="=4.6.1"
