[package]
name = "obd2"
description = "Utility for reading data from a vehicle over OBD-II"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rsammelson/obd2"
version = "0.2.0-pre3"
edition = "2021"

[dependencies]
env_logger = "0.10"
log = "0.4.8"
thiserror = "1.0.15"
ftdi = { version = "0.1.3", optional = true }
serialport= { version = "=4.6.1", optional = true }

[features]
ftdi_comm = [ "dep:ftdi" ]
serialport_comm = [ "dep:serialport" ]
